--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
     "name": "phossa/phossa-di",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "license": "MIT",
     "type": "library",
-    "description": "The dependency injection package of Phossa framework",
-    "keywords": ["phossa", "framework", "di", "dependency injection", "container"],
+    "description": "A PHP dependency injection library",
+    "keywords": ["phossa", "dependency injection", "container"],
     "homepage": "https://github.com/phossa/phossa-di",
     "authors": [
         {
@@ -15,9 +15,19 @@
     "autoload": {
         "psr-0": { "Phossa\\Di\\": "src/" }
     },
+    "autoload-dev": {
+        "psr-0": { "Phossa\\Di\\": "tests/src/" }
+    },
     "require": {
         "php": ">=5.4.0",
-        "phossa-shared": "~1.*"
+        "phossa/phossa-shared": ">=1.0.6",
+        "container-interop/container-interop": "~1.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.*"
+    },
+    "suggest": {
+        "phossa/phossa-cache": "If you want to use config cache"
     },
     "archive": {
         "exclude": ["!vendor", "tests", "*phpunit.xml",  "composer.lock"]
