--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": ">=5.4.0",
         "phossa/phossa-shared": ">=1.0.6",
-        "phossa/phossa-config": "^1.0.7",
+        "phossa/phossa-config": "dev-master",
         "container-interop/container-interop": "~1.0"
     },
     "require-dev": {
