--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,10 @@
     "require": {
         "php": ">=5.4.0",
         "phossa/phossa-shared": ">=1.0.6",
-        "phossa/phossa-config": "master",
+        "phossa/phossa-config": "dev-master",
         "container-interop/container-interop": "~1.0"
     },
+    "minimum-stability": "dev",
     "require-dev": {
         "phpunit/phpunit": "4.*"
     },
